// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiPyClientGenerator - primitive types > should generate valid Python for primitive types > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class ScalarsApiError(ApiError):
    """Raised when \`scalars\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def scalars(
        self,
        *,
        s: str,
        i: int,
        b: bool,
        f: float,
    ) -> types_gen.Scalars:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        _body_fields: dict[str, Any] = {}
        _body_fields["s"] = s
        _body_fields["i"] = i
        _body_fields["b"] = b
        _body_fields["f"] = f
        body = types_gen.Scalars.model_validate(_body_fields).model_dump(
            mode="json", by_alias=True, exclude_unset=True
        )
        request_kwargs: dict[str, Any] = {"json": body}
        if not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        response = self._client.request(
            "POST",
            self._url("/scalars", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.Scalars.model_validate(response.json())
        raise ScalarsApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - primitive types > should generate valid Python for primitive types > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, TypedDict

from pydantic import BaseModel, ConfigDict


class Scalars(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    s: str
    i: int
    b: bool
    f: float


class ScalarsRequest(TypedDict):
    body: "Scalars"


ScalarsError = Never
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle date and date-time formats > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class EventApiError(ApiError):
    """Raised when \`event\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def event(
        self,
        *,
        day: datetime.date,
        moment: datetime.datetime,
    ) -> types_gen.Event:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        _body_fields: dict[str, Any] = {}
        _body_fields["day"] = day
        _body_fields["moment"] = moment
        body = types_gen.Event.model_validate(_body_fields).model_dump(
            mode="json", by_alias=True, exclude_unset=True
        )
        request_kwargs: dict[str, Any] = {"json": body}
        if not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        response = self._client.request(
            "POST",
            self._url("/event", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.Event.model_validate(response.json())
        raise EventApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle date and date-time formats > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

import datetime
from typing import Never, TypedDict

from pydantic import BaseModel, ConfigDict


class Event(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    day: datetime.date
    moment: datetime.datetime


class EventRequest(TypedDict):
    body: "Event"


EventError = Never
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle enum request and response bodies > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class SetStatusApiError(ApiError):
    """Raised when \`set_status\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def set_status(
        self,
        body: types_gen.Status,
    ) -> types_gen.Status:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = self._dump(body)
        request_kwargs: dict[str, Any] = {"json": body}
        if body is not None and not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        response = self._client.request(
            "POST",
            self._url("/status", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.Status.model_validate(response.json())
        raise SetStatusApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle enum request and response bodies > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Literal, Never, TypedDict


Status = Literal["placed", "approved", "delivered"]


class SetStatusRequest(TypedDict):
    body: "Status"


SetStatusError = Never
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle inline integer enums on properties > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Literal, Never, TypedDict

from pydantic import BaseModel, ConfigDict


class Holder(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    p: Literal[1, 2, 3]


class PriorityRequest(TypedDict):
    body: "Holder"


PriorityError = Never
"
`;

exports[`openApiPyClientGenerator - primitive types > should handle primitive scalar response types (text) > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class GreetApiError(ApiError):
    """Raised when \`greet\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def greet(
        self,
    ) -> str:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        response = self._client.request(
            "GET",
            self._url("/greet", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return response.json()
        raise GreetApiError(response.status_code, None)
"
`;
